Fix an alignment issue

--- a/static/css/frame.scss
+++ b/static/css/frame.scss
@@ -141,6 +141,8 @@
 }
 
 #toggle-share {
+  display: flex;
+
   img {
     height: 24px;
     width: 24px;
